feat: update system architecture documentation with comprehensive software architecture concepts

--- a/src/content/docs/software-architecture/system-architecture.mdx
+++ b/src/content/docs/software-architecture/system-architecture.mdx
@@ -1,6 +1,83 @@
 ---
-title: 谈一谈系统体系结构
-description: 系统体系结构
+title: 谈一谈软件架构
+description: 软件架构
 sidebar:
-  order: 0
+    order: 0
 ---
+
+这一节主要讲解系统体系结构（架构）的概念，当然，不同的来源对于架构的定义也不同。
+
+## 软件架构概述
+
+---
+
+考虑到架构在建筑学、计算机硬件结构等方面的应用，我们可以得到**架构的共性特征**：
+
+-   一组基本的构成要素——**构件**
+-   这些要素之间的连接关系——**连接件**
+-   这些要素连接之后形成的拓扑结构——**物理分布**
+-   作用于这些要素或连接关系之上的限制条件——**约束**
+-   质量——**性能**
+
+在软件架构的概念里，构件也就是各种基本的软件构造模块，包括函数、对象、模式等，连接件就是将它们组合起来之后形成的完整的软件系统。
+
+:::tip
+软件架构并没有标准定义，因为软件架构的概念仍然处于起步阶段，尽管这个概念深深根植于软件工程的实践中。
+:::
+
+而从上面软件架构的定义，我们可以得到以下几点结论：
+
+-   架构提供了一个结构、行为和属性的高级抽象。
+-   架构是从一个较高的层次来考虑组成系统的构件、构件之间的连接，以及由构件与构件交互形成的拓扑结构。
+-   这些要素应该满足一定的限制，遵循一定的设计规则，能够在一定的环境下进行演化。
+-   反映系统开发中具有重要影响的设计决策，便于各种人员的交流，反映多种关注，据此开发的系统能完成系统既定的功能和性能需求。
+
+## 软件架构的目标
+
+软件架构关注的点有以下几方面：
+
+-   如何将复杂的软件系统划分为模块？
+-   如何规范模块的构成？
+-   如何将这些模块组织为完整的系统？
+-   如何保证系统的质量要求？
+
+因此，软件架构的**主要目标**就是**建立一个一致的系统及其视图集，并表达为最终用户和软件设计者需要的结构形式，以支持用户和设计者的交流与理解。**
+
+而目标又可以分为**外向目标**和**内向目标**，分别负责建立满足最终用户要求的系统需求和建立满足系统设计者需要以及易于系统实现、维护和扩展的系统构件构成。
+
+> 由此可以看出，SA 是交流的手段，是可传递、可复用的模型，也是关键决策的体现。
+
+## 软件架构的重要意义
+
+-   SA 是软件开发过程初期的产品，在开发的早期阶段既要考虑系统的正确设计与方案选择，为以后的开发、测试、维护各个阶段**提供了保证**。
+-   与其他后期的设计活动相比，SA 设计的**成本和代价**要小得多。
+-   正确有效的 SA 设计会给软件开发过程带来**巨大的效益**，提高软件开发的质量和效率。
+-   在大型软件系统中，质量属性更多的是由**系统结构和功能划分**来实现的，而不仅仅依靠所选择的算法和数据结构。
+
+## 软件架构在软件生命周期中的作用
+
+-   `项目规划阶段`：考虑项目的规模、复杂度、可行性等。
+-   `需求分析阶段`：① 利用 SA 交流和协商；② 从不同视角审查 SA，找到合理的平衡方案；③ 从用户角度考虑想起变更，使 SA 能够提前支持变化。
+-   `设计阶段`：① 参考经典 SA 风格，设计架构模型，推敲缺陷和方案并评估；② 逐步细化 SA 并对定型后的 SA 做文档化工作。
+-   `实现阶段`：各开发团队按照 SA 规定的构件及其相互关系进行开发，保证系统与 SA 一致。
+-   `测试与评审阶段`：根据 SA 设计的约束条件，对系统的质量属性进行测试。
+-   `维护阶段`：SA 文档是维护和升级的重要依据。
+
+:::tip[软件架构与其他软件设计活动的比较]
+
+-   起点模糊：在用户需求尚未明确的情况下，SA 也可以开始设计，故而需要反复交流和协商。
+-   抽象层次高：SA 是对系统的高层次抽象，不涉及具体的实现细节。
+-   分布决策：来自用户、开发者、管理者等多方面的决策，SA 是这些决策的体现。
+-   贯穿全局：SA 是整个软件开发过程的贯穿始终的一个活动，越往后越能体现 SA 的价值。
+
+:::
+
+## 软件质量
+
+软件质量是用来形容软件与明确的和隐含的需求相一致的程度。软件质量的定义是一个多维度的概念，包括以下几个方面：正确性、完备性、性能、安全性、健壮性、可维护性、可移植性、可重用性、可理解性、可靠性、可用性、可扩展性、可互操作性等。
+
+:::note
+软件质量在某方面的提高，往往会导致其他方面的降低，因此，软件质量的提高是一个多方面的权衡过程。
+:::
+
+![软件质量因素及其对策](@src/assets/software-architecture/quality.excalidraw.png)
