feat: enhance computer layer software architecture documentation with business decomposition and service governance insights

--- a/src/content/docs/software-architecture/computer-layer-sa.mdx
+++ b/src/content/docs/software-architecture/computer-layer-sa.mdx
@@ -30,3 +30,29 @@ sidebar:
 -   难以应对敏捷持续交付的挑战。
 
 因此，大规模系统架构的设计一般原则就是**尽可能地拆分**，以达到更好的独立扩展与伸缩、更灵活的部署、更好的隔离和容错、更高的开发效率。
+
+-   **业务纵向拆分**：按业务进行梳理，根据业务的特性把应用拆开，不同的业务模块独立部署。
+-   **业务横向拆分**：将核心的、公共的业务拆分出来，通过分布式服务框架对业务进行服务化，消费者通过标准的契约来消费这些服务。服务提供者独立打包、部署和演进，与消费者解藕。
+
+然而，在业务拆分之后服务数增多，**服务治理问题**成为了亟待解决的问题。服务治理的目标是**有效管控服务，提升服务运行质量，防止业务服务代码架构腐化。**服务治理要解决的主要问题如下：
+
+-   **生命周期的管理**：服务上线随意，线上服务鱼龙混杂，上线容易下线难。需要规范化上线审批、测试发布流程、下线通知等。
+-   **服务容量的规划**：需要能够采集服务调用性能、时延、成功率、系统资源占用等综合性能指标，分析并识别服务容量瓶颈，合理分配服务容量（计算、数据、网络等资源）。
+-   **运行时的治理**：流量陡增时的非核心业务 SLA 降级；缓存失效，数据 I/O 开销陡增导致业务失败，需要在线调大服务调用超时时间；非核心服务故障时，业务应放行并执行本地降级逻辑。
+-   **服务安全的保障**：服务调用鉴权、服务调用加密、服务调用防重放、服务调用限流、服务调用熔断、服务调用降级等。
+
+### 非功能度量指标
+
+-   **性能**：系统的性能指标包括 CPU 速度（MIPS）、RT 响应时间、吞吐量（MIPS / TFLOPS / TPS / QPS）、网络带宽（MbPS）、并发数、网络延时 等。
+-   **可用性**：系统的可用性指标包括 MTBF、MTTR、MTTF、SLA、SLI、SLO、SLR 等。
+-   **扩展性**：系统的扩展性指标包括水平扩展、垂直扩展、弹性扩展、伸缩性、容量规划、负载均衡、分布式存储、分布式计算等。
+
+:::tip[相关概念]
+TPS（Transactions Per Second）是指每秒钟系统处理的事务数，而 QPS（Queries Per Second）是指每秒钟系统处理的查询数。在数据库中，TPS 通常指的是事务数，而 QPS 通常指的是查询数。
+
+MTTF（Mean Time To Failure）是指平均故障时间，MTTR（Mean Time To Repair）是指平均修复时间，MTBF（Mean Time Between Failures）是指平均故障间隔时间。
+
+其中关系可以表示成：MTBF = MTTF + MTTR。系统可用性 = MTBF / (MTBF + MTTR)。在实际应用中，有些概念会将 MTBF 计算过程中再加一个 MTTD（Mean Time To Detect）。
+
+这么看还是一团乱麻的，可以参考 [这篇文章](https://blog.csdn.net/yunhua_lee/article/details/121674703)。
+:::
