feat: enhance documentation with new sections on layout rules and Docker network overview

--- a/src/content/docs/css/visual-formating-model.mdx
+++ b/src/content/docs/css/visual-formating-model.mdx
@@ -12,3 +12,75 @@ sidebar:
 ---
 
 盒子模型规定了单个盒子的规则，而视觉格式化模型则规定了如何将这些盒子放置在页面上。视觉格式化模型，你也可以将其理解为布局规则：视觉格式化模型大体将页面中盒子的排列分为了三种方式：常规流、浮动和绝对定位。
+
+### 常规流布局
+
+**常规流**，也可以叫做**文档流**、**普通文档流**或者**常规文档流**，是浏览器默认的布局方式，它规定了盒子在页面中的排列方式。总体规则是——块盒独占一行，行盒水平依次排列。
+
+:::tip[包含块(Containing Block)]
+每个盒子都有它的包含块，包含块决定了盒子的排列区域。绝大部分情况下，盒子的包含块，就是它父元素的内容盒。
+:::
+
+#### 块盒
+
+1. 每个块盒的总宽度（content + padding + border + margin）必须等于包含块宽度。
+
+-   宽度的默认值是 auto，auto 就代表吸收剩余空间的能力。
+-   magin 的默认值是 0，但可以设置为 auto。
+-   width 和 margin 同时为 auto 时，**width 会优先获得 auto** ，margin 会优先获得 `0`。
+-   若 content + padding + border + margin 的总宽度仍然不够，则 margin-right 会自动获得 auto，吸收剩余空间。
+-   在常规流中，块盒可以通过 ` width 固定; margin-left: auto; margin-right: auto;` 实现水平居中。
+
+2. 每个块盒垂直方向上的 auto 值。
+
+-   height: auto 时，块盒的高度由内容决定。
+-   margin: auto 时，块盒的垂直方向上的 auto 值会自动获得 0。
+
+3. 百分比取值
+
+-   padding 、margin 、width 的百分比取值，都是**相对于包含块**的**宽度**。
+
+-   高度的百分比需要考虑**包含块的高度是否取决于子元素的高度**。
+    -   如果父元素的高度取决于子元素的高度，比如父元素的高度是 auto 或者没有设置高度，那么子元素的高度百分比是无效的。
+    -   如果父元素的高度不取决于子元素的高度，比如父元素的高度是固定的，那么子元素的高度百分比是有效的。
+
+:::note
+父元素的 width 是 600px，height 是 1000px。子元素的 margin-top 是 50%，那么子元素的 margin-top 的值是 300px，而不是 500px。
+:::
+
+4. 常规流里块盒的边距合并。
+
+-   相邻垂直外边距会取最大值合并。
+-   父子元素的垂直外边距合并
+
+import { Tabs, TabItem } from "@astrojs/starlight/components";
+
+<Tabs>
+    <TabItem label="错误写法" icon="close">
+        ```CSS
+        .parent {
+            height: 300px;
+            margin-top: 30px;
+        }
+        .child {
+            height: 100px;
+            margin-top: 30px;
+        }
+        ```
+    </TabItem>
+    <TabItem label="正确写法" icon="approve-check">
+        ```CSS
+        .parent {
+            height: 300px;
+            margin-top: 30px;
+            padding-top: 30px;
+        }
+        .child {
+            height: 100px;
+            /* margin-top: 30px; */
+        }
+        ```
+    </TabItem>
+</Tabs>
+
+效果是子元素紧贴着父元素，父元素的 margin-top 是 30px，子元素的 margin-top 是 30px，父元素和子元素的垂直外边距合并了。
