feat: add section on distributed programming models and compare MapReduce with MPI

--- a/src/content/docs/software-architecture/compute-layer-sa.mdx
+++ b/src/content/docs/software-architecture/compute-layer-sa.mdx
@@ -56,3 +56,26 @@ MTTF（Mean Time To Failure）是指平均故障时间，MTTR（Mean Time To Rep
 
 这么看还是一团乱麻的，可以参考 [这篇文章](https://blog.csdn.net/yunhua_lee/article/details/121674703)。
 :::
+
+## 分布式编程模型
+
+---
+
+“摩尔定律”，即计算机硬件性能每隔 18 个月就会翻一番，而价格却会降低一半。这个定律在 2004 年左右开始失效，因为 CPU 的频率已经达到物理极限，无法再通过提高频率来提升性能。
+
+因此，计算机硬件性能的提升开始转向多核处理器和并行计算。
+
+谷歌公司的 **MapReduce** 和 **Hadoop** 等分布式计算框架应运而生，它们通过将计算任务分发到多个处理器上并行执行，从而实现了性能的大幅提升。
+
+> 在 MapReduce 出现之前，已经有了 MPI 这样的并行计算框架。然而，MPI 的编程模型相对复杂，需要程序员手动管理并行计算中的数据分发和通信，这给程序员带来了很大的负担。
+
+
+下面表格展示了 MapReduce 和 MPI 的主要区别：
+| 特性         | MapReduce                   | MPI                           |
+| ------------ | --------------------------- | ----------------------------- |
+| 编程模型     | Map 和 Reduce 函数          | 点对点通信和集合操作          |
+| 容错性       | 自动容错，任务失败自动重试  | 需要手动处理错误和容错        |
+| 扩展性       | 自动扩展，支持大规模集群    | 需要手动管理节点和任务分配    |
+| 编程难度     | 简单，适合大数据处理        | 复杂，需要手动管理并行计算    |
+| 适用场景     | 批处理、非实时、数据密集型  | 实时、细粒度计算、计算密集型  |
+| 硬件/价格/扩展性 | 刀片服务器、高速网、SAN，价格贵，扩展性差 | 普通PC机，便宜，扩展性好 |
