feat: update compute layer documentation with load balancing concepts and remove obsolete TypeScript configuration files

--- a/src/content/docs/software-architecture/compute-layer-sa.mdx
+++ b/src/content/docs/software-architecture/compute-layer-sa.mdx
@@ -5,6 +5,8 @@ sidebar:
     order: 2
 ---
 
+计算层的软件架构技术将从挑战与历史、分布式编程模型、负载均衡、消息队列和分布式服务框架等方面进行介绍。
+
 ## 计算层的软件架构技术挑战
 
 ---
@@ -158,10 +160,81 @@ MapReduce 模型的工作流程可以分为以下几个步骤：
 
 YARN（Yet Another Resource Negotiator）是 Hadoop 2.x 引入的一个新的资源管理框架，它将资源管理和作业调度解耦，使得 MapReduce 可以与其他计算框架（如 Spark、Tez 等）共享集群资源。
 
-设计优点
+-   设计优点
 
--   这个设计大大减小了 JobTracker（也就是现在的 ResourceManager）的资源消耗，并且让监测每一个 Job 子任务 (tasks) 状态的程序分布式化了，更安全、更优美。
--   另外，在新版中，ApplicationMaster 是一个可变更的部分，用户可以对不同的编程模型写自己的 ApplicationMaster，让更多类型的编程模型能够跑在 Hadoop 集群中。
--   能够支持不同的编程模型。
--   对于资源的表示以内存为单位（在目前版本的 Yarn 中，没有考虑 CPU 的占用），比之前以剩余 slot 数目更合理。
--   既然资源表示成内存量，那就没有了之前的 mapslot/reduceslot 分开造成集群资源闲置的尴尬情况了。
+        -   这个设计大大减小了 JobTracker（也就是现在的 ResourceManager）的资源消耗，并且让监测每一个 Job 子任务 (tasks) 状态的程序分布式化了，更安全、更优美。
+        -   另外，在新版中，ApplicationMaster 是一个可变更的部分，用户可以对不同的编程模型写自己的 ApplicationMaster，让更多类型的编程模型能够跑在 Hadoop 集群中。
+        -   能够支持不同的编程模型。
+        -   对于资源的表示以内存为单位（在目前版本的 Yarn 中，没有考虑 CPU 的占用），比之前以剩余 slot 数目更合理。
+        -   既然资源表示成内存量，那就没有了之前的 mapslot/reduceslot 分开造成集群资源闲置的尴尬情况了。
+
+## 负载均衡
+
+---
+
+### 负载均衡
+
+负载均衡（Load Balancing）是一种网络架构，它通过将网络流量分配到多个服务器来提高系统的可用性和性能。**负载均衡器**（Load Balancer）是用于实现负载均衡的设备或软件。负载均衡器分为**DNS 负载均衡**、**硬件负载均衡**和**软件负载均衡**三种类型。
+
+负载均衡器通常位于网络中的关键位置，如防火墙、路由器或交换机等。它通过监听来自客户端的请求，并根据一定的算法将请求分配给后端的服务器。负载均衡器可以确保后端服务器能够均匀地处理请求，从而提高系统的整体性能和可用性。
+
+#### DNS 负载均衡
+
+-   优点：实现简单，成本低；就近访问，提高访问速度。
+-   缺点：
+    -   DNS 解析结果可能存在缓存，导致负载不均衡；
+    -   扩展性差，无法根据业务需求动态调整负载；
+    -   分配策略比较简单，不能区分服务器差异，不能感知服务器状态。
+
+#### 硬件负载均衡
+
+目前业界典型的硬件负载均衡设备有两款：F5 和 A10。
+
+-   优点：
+
+        -   功能强大，支持全面的负载均衡算法，支持全局负载均衡；
+        -   性能强大，支持百万级并发；
+        -   稳定性高；
+        -   支持安全防护。
+
+-   缺点：
+    -   成本高，价格昂贵；
+    -   扩展性差，无法满足业务快速变化的需求；
+    -   维护成本高，需要专业人员进行维护。
+
+#### 软件负载均衡
+
+软件负载均衡器通常运行在服务器上，通过软件实现负载均衡功能。常见的软件负载均衡器包括 Nginx、HAProxy、LVS 等。Nginx 是 7 层负载均衡器，HAProxy 是 4 层负载均衡器，LVS 是 4 层负载均衡器。
+
+:::tip
+层数的区别在于**协议**和**灵活性**。Nginx 支持 HTTP、E-mail 协议，而 LVS 和协议无关，几乎所有应用都可以支持。
+:::
+
+-   优点：简单、便宜、灵活；
+-   缺点：与硬件负载均衡相比，性能较差，功能不够强大，一般不具备安全防护功能。
+
+#### 负载均衡典型架构
+
+-   **地理级别负载均衡**：当用户访问的时候，根据用户地理位置，将用户请求分发到最近的服务器上，从而提高访问速度和用户体验。
+-   **集群级别负载均衡**：F5 收到请求后，进行集群级别的负载均衡。
+-   **机器级别负载均衡**：Nginx 收到用户请求后，将用户请求发送给集群里面的某台服务器。
+
+#### 负载均衡的算法
+
+分配标准有以下几种：**任务数平分**、**负载均衡**、**性能最优**、**Hash**。
+
+-   **任务数平分**：将任务均匀地分配给所有可用的服务器。
+-   **负载均衡**：根据服务器的负载情况，将任务分配给负载较低的服务器。
+-   **性能最优**：根据服务器的性能指标，将任务分配给性能最优的服务器。
+-   **Hash**：根据请求的某个属性（如 IP 地址、URL 等）进行哈希运算，将任务分配给哈希值对应的服务器。
+
+> 具体有哪些算法呢？
+
+-   轮询（Round Robin）：将请求按顺序分配给服务器。
+-   加权轮询（Weighted Round Robin）：根据服务器的权重，将请求按比例分配给服务器。
+-   负载最低优先（Least Connections）：将请求分配给当前连接数最少的服务器。
+-   性能最优（Best Performance）：将请求分配给响应时间最短的服务器。
+-   IP Hash（IP Hash）：根据请求的 IP 地址进行哈希运算，将请求分配给哈希值对应的服务器。
+-   URL Hash（URL Hash）：根据请求的 URL 进行哈希运算，将请求分配给哈希值对应的服务器。
+-   ID Hash（ID Hash）：根据请求的 ID 进行哈希运算，将请求分配给哈希值对应的服务器。
+
