feat: add communication model details for message queues in compute layer documentation

--- a/src/content/docs/software-architecture/compute-layer-sa.mdx
+++ b/src/content/docs/software-architecture/compute-layer-sa.mdx
@@ -238,3 +238,15 @@ YARN（Yet Another Resource Negotiator）是 Hadoop 2.x 引入的一个新的资
 -   URL Hash（URL Hash）：根据请求的 URL 进行哈希运算，将请求分配给哈希值对应的服务器。
 -   ID Hash（ID Hash）：根据请求的 ID 进行哈希运算，将请求分配给哈希值对应的服务器。
 
+### 消息队列
+
+#### 通信模型
+
+-   基于寻址类型，可以分为直接通信和间接通信。
+-   基于阻塞类型，可以分为同步通信和异步通信。
+-   基于缓存类型，可以分为瞬态通信和持久化通信。
+-   基于内容类型，可以分为事件通信、指令通信、数据通信和流通信。
+-   基于确认类型，可以分为无确认通信、有确认通信和可靠通信。
+-   基于接收节点数，可以分为点对点通信、多播通信、任播通信、广播通信和地域性群播通信。
+-   基于通讯方向，可以分为单向通信和半双工通信和全双工通信。
+-   基于发起方，可以分为 Pull 通信和 Push 通信。
