feat: add transient and persistent communication types to compute layer documentation

--- a/src/content/docs/software-architecture/compute-layer-sa.mdx
+++ b/src/content/docs/software-architecture/compute-layer-sa.mdx
@@ -250,3 +250,4 @@ YARN（Yet Another Resource Negotiator）是 Hadoop 2.x 引入的一个新的资
 -   基于接收节点数，可以分为点对点通信、多播通信、任播通信、广播通信和地域性群播通信。
 -   基于通讯方向，可以分为单向通信和半双工通信和全双工通信。
 -   基于发起方，可以分为 Pull 通信和 Push 通信。
+-   基于消息存储，可以分为瞬态通信和持久化通信。
