feat: update compute layer documentation with load balancing overview and communication models

--- a/src/content/docs/software-architecture/compute-layer-sa.mdx
+++ b/src/content/docs/software-architecture/compute-layer-sa.mdx
@@ -172,13 +172,13 @@ YARN（Yet Another Resource Negotiator）是 Hadoop 2.x 引入的一个新的资
 
 ---
 
-### 负载均衡
+### 概述
 
 负载均衡（Load Balancing）是一种网络架构，它通过将网络流量分配到多个服务器来提高系统的可用性和性能。**负载均衡器**（Load Balancer）是用于实现负载均衡的设备或软件。负载均衡器分为**DNS 负载均衡**、**硬件负载均衡**和**软件负载均衡**三种类型。
 
 负载均衡器通常位于网络中的关键位置，如防火墙、路由器或交换机等。它通过监听来自客户端的请求，并根据一定的算法将请求分配给后端的服务器。负载均衡器可以确保后端服务器能够均匀地处理请求，从而提高系统的整体性能和可用性。
 
-#### DNS 负载均衡
+### DNS 负载均衡
 
 -   优点：实现简单，成本低；就近访问，提高访问速度。
 -   缺点：
@@ -186,7 +186,7 @@ YARN（Yet Another Resource Negotiator）是 Hadoop 2.x 引入的一个新的资
     -   扩展性差，无法根据业务需求动态调整负载；
     -   分配策略比较简单，不能区分服务器差异，不能感知服务器状态。
 
-#### 硬件负载均衡
+### 硬件负载均衡
 
 目前业界典型的硬件负载均衡设备有两款：F5 和 A10。
 
@@ -202,7 +202,7 @@ YARN（Yet Another Resource Negotiator）是 Hadoop 2.x 引入的一个新的资
     -   扩展性差，无法满足业务快速变化的需求；
     -   维护成本高，需要专业人员进行维护。
 
-#### 软件负载均衡
+### 软件负载均衡
 
 软件负载均衡器通常运行在服务器上，通过软件实现负载均衡功能。常见的软件负载均衡器包括 Nginx、HAProxy、LVS 等。Nginx 是 7 层负载均衡器，HAProxy 是 4 层负载均衡器，LVS 是 4 层负载均衡器。
 
@@ -213,13 +213,13 @@ YARN（Yet Another Resource Negotiator）是 Hadoop 2.x 引入的一个新的资
 -   优点：简单、便宜、灵活；
 -   缺点：与硬件负载均衡相比，性能较差，功能不够强大，一般不具备安全防护功能。
 
-#### 负载均衡典型架构
+### 负载均衡典型架构
 
 -   **地理级别负载均衡**：当用户访问的时候，根据用户地理位置，将用户请求分发到最近的服务器上，从而提高访问速度和用户体验。
 -   **集群级别负载均衡**：F5 收到请求后，进行集群级别的负载均衡。
 -   **机器级别负载均衡**：Nginx 收到用户请求后，将用户请求发送给集群里面的某台服务器。
 
-#### 负载均衡的算法
+### 负载均衡的算法
 
 分配标准有以下几种：**任务数平分**、**负载均衡**、**性能最优**、**Hash**。
 
@@ -238,9 +238,11 @@ YARN（Yet Another Resource Negotiator）是 Hadoop 2.x 引入的一个新的资
 -   URL Hash（URL Hash）：根据请求的 URL 进行哈希运算，将请求分配给哈希值对应的服务器。
 -   ID Hash（ID Hash）：根据请求的 ID 进行哈希运算，将请求分配给哈希值对应的服务器。
 
-### 消息队列
+## 消息队列
 
-#### 通信模型
+---
+
+### 通信模型
 
 -   基于寻址类型，可以分为直接通信和间接通信。
 -   基于阻塞类型，可以分为同步通信和异步通信。
@@ -251,3 +253,135 @@ YARN（Yet Another Resource Negotiator）是 Hadoop 2.x 引入的一个新的资
 -   基于通讯方向，可以分为单向通信和半双工通信和全双工通信。
 -   基于发起方，可以分为 Pull 通信和 Push 通信。
 -   基于消息存储，可以分为瞬态通信和持久化通信。
+
+## 分布式服务框架
+
+---
+
+### 原理
+
+-   Service 层主要包括 Java 动态代理，供消费者使用，主要用于将服务提供者的接口封装成远程服务调用，隐藏远程调用的细节，使得消费者调用远程服务就像调用本地服务一样；
+-   Java 反射，服务提供者使用，根据消费者请求消息中的接口名、方法名、参数列表反射调用服务提供者的接口本地实现类。
+-   业务的服务接口定义和实现类，对于使用 Spring 配置化开发的就是 Spring Bean，具体服务逻辑内容由业务部门实现，平台部门负责将业务接口发布成远程服务。
+
+### 功能
+
+从功能角度看，分布式服务框架通常包括两大功能：**服务治理中心**和**服务注册中心**。
+
+-   服务注册中心：负责服务的发布和通知，通常支持对等集群的部署，某一个服务中心宕机并不会导致整个服务注册中心集群不可用。即便整个服务注册中心全部宕机，也只影响新服务的注册和发布，不影响已经发布服务的访问。HSF 使用的是基于数据库的 ConfigServer，Dubbo 使用的是 Zookeeper，Spring Cloud 使用的是 Eureka。
+-   服务治理中心：通常包含服务治理接口和服务质量 Portal，架构师、测试人员和系统运维人员通过服务治理 Portal 对服务的运行状态、历史数据、健康度和调用关系等进行可视化的分析和维护，目标就是要持续化服务，防止服务架构腐化，保证服务高质量运行。
+
+### 功能特性
+
+1. 服务订阅发布
+
+-   配置化发布和引用服务：支持通过 XML 配置的方法发布和导入服务，降低对业务代码的侵入；
+-   服务自动发现机制：支持服务实时自动发现，由注册中心推送服务地址，消费者不需要配置服务提供者地址，服务地址透明化;
+-   服务在线注册和去注册：支持运行注册新的服务，也支持运行态取消某个服务的注册。
+
+2. 服务路由
+
+-   路由策略：默认提供随机路由、轮询、基于权重的路由策略，避免每个框架使用者都重复开发；
+-   粘滞连接：总是向同一个提供发发起请求，除非此提供方宕机再切换到另一台；
+-   路由定制：支持用户自定义路由策略，扩展平台的功能。
+
+3. 集群容错
+
+-   Failover：失败自动切换，当出现失败重试其他服务器，通常用于读操作，也可以用于幂等性写操作；
+-   Failback：失败自动恢复，后台记录失败请求，定时重试，用于消息通知操作；
+-   Failfast：快速失败，只发起一次调用，失败立即报错，通常用于非幂等性写操作；
+
+4. 服务调用
+
+-   同步调用：消费者发起服务调用之后，同步阻塞等待服务端响应；
+-   异步调用：消费者发起服务调用之后，不阻塞立即返回，由服务端返回应答后异步通知消费者；
+-   并行调用：消费者同时对多个服务提供者批量发起服务调用请求，批量发起请求后集中等待应用。
+
+5. 多协议
+
+-   私有协议：支持二进制等私有协议，支持私有协议定制和扩展；
+-   共有协议：提供 Web Service 等共有协议，用于外部服务对接。
+
+6. 序列化方式
+
+-   二进制类序列化：支持 Thrift、Protocol Buffer 等二进制协议，提升序列化性能；
+-   文本类序列化：支持 JSON、XML 等文本协议，提升通用性和可读性。
+
+7. 统一配置
+
+-   本地静态配置：安装部署修改一次、运行态不修改，可以存放到本地配置文件；
+-   基于配置中心的动态配置：运行态需要调整的参数，统一放到配置中心（服务注册中心），修改之后统一下发，实时生效。
+
+### 对于幂等性的补充
+
+**分布式系统中的幂等性概念**：用户对于同一操作发起的一次请求或多次请求的结果是一致的，不会因为多次点击而产生副作用。
+
+**幂等性的重要性**：由于服务无状态的本质们对于业务的敏感性是很弱的。如果不支持幂等性，就会导致服务重复操作，对于业务数据进行违背业务逻辑的操作。比如，下单以后付款，如果不支持幂等性，可能会导致多次付款。
+
+**幂等场景**：① 网络波动导致请求重复；② 分布式消息消费：任务发布后，使用分布式消息服务来进行消费；③ 用户重复操作：用户在操作时，可能无意触发多次交易，甚至没有响应而有意重复操作。④ 未关闭的重试机制：因开发、测试或运维人员未检测出错误的情况下开启了重试机制，导致重复操作。
+
+幂等性的影响往往作用在数据上，而不同**数据库操作**对于幂等性的反应也不一样。
+
+-   新增类请求：不具备幂等性；
+-   查询类动作：重复查询不会产生或变更新的数据，查询具有天然幂等性；
+-   更新类请求：① 基于主键的计算式更新，不具有幂等性；② 基于主键的赋值式更新，具有幂等性；③ 基于条件查询的更新，不一定具有幂等性。
+-   删除类请求：基于主键的删除，具有幂等性。一般业务层面都是逻辑删除，而基于主键的逻辑删除操作也是具有幂等性的。
+
+**数据库的幂等性解决方案**
+
+-   数据库加锁法：让关键资源的操作串行器来，但是会引入效率、死锁问题；
+-   全局唯一 ID 法：根据业务的操作和内容生成一个全局 ID，在执行操作前先判断 ID 是否存在，借此判断操作是否已经执行。该方案缺点是实现起来比较困难，同时与服务的业务解绑有一定的冲突；
+-   去重表法：在本身具有唯一标识的业务场景下是非常好的方法，利用唯一的标识号来判断是否已经执行过操作；
+-   多版本控制法：为每一次操作添加一次版本号以示区别。缺点在于版本号的管理，以及通常适用于更新操作，并且往往需要配合日志来完成数据最的一致性；
+-   状态机控制法：这种方法是适合在有状态机流转的情况下，比如就会订单的创建和付款，订单的状态流转是有限的，可以通过状态机来控制幂等性。
+
+### 微服务
+
+#### 概述
+
+-   **微服务**是一种架构设计模式。在微服务架构中，业务逻辑被拆分成一系列小而松散耦合的分布式组件，共同构成了较大的应用。每个组件都被称为微服务。
+-   每个微服务都在整体架构中执行单独的任务，或者负责单独的功能。
+-   每个微服务可能会被一个或多个其他微服务调用，以执行较大应用需要完成的具体任务。
+-   系统为任务执行——比如搜索或显示图片任务，或者其他可能需要多次执行的任务提供了统一的解决处理方式，并限制应用内不同地方生成或维护相同功能的多个版本。
+-   微服务是围绕业务功能构建的，可以通过全自动部署机制进行独立部署。这些服务的集中化管理已经是最少的，他们可以用不同的编程语言编写，并使用不同的数据存储技术。
+-   微服务需要做到**负责单功能**、**单独部署**、**包含一个或多个进程**、**拥有自己的数据存储**、**一只小团队就能维护几个微服务**、**可替换的**。
+
+#### 和 SOA 架构的区别
+
+| 特性     | SOA                  | 微服务                       |
+| -------- | -------------------- | ---------------------------- |
+| 组件大小 | 大块业务逻辑         | 单独任务或小块业务逻辑       |
+| 耦合     | 通常松耦合           | 总是松耦合                   |
+| 公司架构 | 任何类型             | 小型、专注于功能交叉团队     |
+| 管理     | 着重中央管理         | 着重分散管理                 |
+| 目标     | 确保应用能够交互操作 | 执行新功能、快速拓展开发团队 |
+
+#### 服务架构的服务集成
+
+-   SOA 体系下，服务之间通过企业服务总线通信，许多业务逻辑在中间层（消息的路由、转换和组织）中实现；
+-   微服务架构倾向于降低中心消息总线的依赖，将业务逻辑分布在每个具体的服务端；
+-   大部分微服务基于 HTTP、JSON 这样的标准协议，集成不同的标准和格式变得不再重要。另外一个选择是采用轻量级的消息总线或者网关，有路由功能，没有复杂的业务逻辑。
+-   **点对点方式**：直接调用服务，每个服务都开放 REST API，并且调用其他微服务的接口。在比较简单的微服务应用场景下，这种方式还可行，随着应用复杂度的提升，会变得越来越不可维护。此时，尽量不采用点对点的集成方式。
+-   **API 网关方式**：其核心要点是，所有的客户端和消费端都通过统一的网关接入微服务，在网关层处理所有的非业务功能。通常，网管也是提供 REST/HTTP 的访问 API。服务端通过 API-GW 注册和管理服务。**优势在于**——① 有能力为微服务接口提供给网关层次的抽象；② 轻量的消息路由、格式转换；③ 统一控制安全、监控、限流等非业务功能。④ 每个微服务会变得更加轻量，非业务功能都在网关层统一处理，微服务只需要关注业务逻辑。
+-   **消息代理方式**：微服务也可以集成在异步场景下，通过队列和订阅主题，实现消息的发布和订阅。一个微服务可以是消息的发布者，把消息通过异步的方式发送到队列或者订阅主题下，作为消费者的微服务可以从队列或者主题获取消息。通过消息中间件把之间的直接调用解耦。通常异步的生产者/消费者模式，通过 AMQP、MQTT、Kafka 等消息中间件实现。
+
+#### 微服务架构的服务发现
+
+-   **客户端发现模式**：客户端直接调用服务，客户端负责发现服务的位置。优点是简单直接的同时，因为知晓可用的服务实例，能针对特定应用实现智能负载均衡；缺点是客户端需要实现服务发现的逻辑，服务发现的逻辑分散在客户端，不利于统一管理。
+-   **服务端发现模式**：客户端通过服务注册中心查询服务实例的位置，服务注册中心负责维护服务实例的元数据。服务端发现模式将服务发现的逻辑集中管理，客户端只需要知道服务注册中心的地址，就可以实现服务发现。服务端发现模式有如下优点：① 服务注册中心统一管理服务实例，便于集中管理；② 客户端只需要知道服务注册中心的地址，就可以实现服务发现，客户端不需要实现服务发现的逻辑；缺点是，有的部署环境会免费提供这一功能，但是如果不然，就需要额外的开销——负载均衡器。
+
+#### 微服务架构的服务注册
+
+-   服务注册表是服务发现的核心部分，是包含服务实例的网络地址的数据库。
+-   服务注册表需要高可用而且随时更新。客户端能够缓存从服务注册表中获取的网络地址，然而，这些信息最终会过时，客户端也就无法发现服务实例。因此，服务注册表会包含若干服务端，使用复制协议保持一致性。
+-   服务实例必须在注册表中注册和注销。注册和住下有两种不同的方法：自注册模式和第三方注册模式。
+
+#### 微服务架构的数据去中心化
+
+-   每个微服务有自己私有的数据库持久化业务逻辑；
+-   每个微服务只能访问自己的数据库；
+-   某些业务场景下，需要在一个事务中更新多个数据库。不能直接访问其他数据库，而是通过微服务操作。
+
+### Docker
+
+Docker 部分参考：[Docker](/docker/preview)
