--- a/src/content/docs/css/visual-formating-model.mdx
+++ b/src/content/docs/css/visual-formating-model.mdx
@@ -66,6 +66,8 @@ import { Tabs, TabItem } from "@astrojs/starlight/components";
             height: 100px;
             margin-top: 30px;
         }
+        /*子元素紧贴着父元素父子元素的垂直外边距合并为30px*/
+
         ```
     </TabItem>
     <TabItem label="正确写法" icon="approve-check">
@@ -83,4 +85,3 @@ import { Tabs, TabItem } from "@astrojs/starlight/components";
     </TabItem>
 </Tabs>
 
-效果是子元素紧贴着父元素，父元素的 margin-top 是 30px，子元素的 margin-top 是 30px，父元素和子元素的垂直外边距合并了。
