fix: clarify containing block explanation in visual formatting model documentation

--- a/src/content/docs/css/visual-formating-model.mdx
+++ b/src/content/docs/css/visual-formating-model.mdx
@@ -18,7 +18,7 @@ sidebar:
 **常规流**，也可以叫做**文档流**、**普通文档流**或者**常规文档流**，是浏览器默认的布局方式，它规定了盒子在页面中的排列方式。总体规则是——块盒独占一行，行盒水平依次排列。
 
 :::tip[包含块(Containing Block)]
-每个盒子都有它的包含块，包含块决定了盒子的排列区域。绝大部分情况下，盒子的包含块，就是它父元素的内容盒。
+每个盒子都有它的包含块，包含块决定了盒子的排列区域。**绝大部分情况下**，盒子的包含块，就是它父元素的内容盒。
 :::
 
 #### 块盒
