feat: add positioning section and clarify height behavior in visual formatting model documentation

--- a/src/content/docs/css/visual-formating-model.mdx
+++ b/src/content/docs/css/visual-formating-model.mdx
@@ -106,7 +106,7 @@ import { Tabs, TabItem } from "@astrojs/starlight/components";
 ### 盒子尺寸
 
 1. 常规流 width 为 auto 时，吸收包含块剩余空间。浮动元素 width 为 auto 时，宽度由内容决定。
-2. 浮动元素和常规流元素的高度都是由内容决定。
+2. 浮动元素和常规流元素的高度为 auto 时都是由内容决定。
 3. 常规流 margin 为 auto 时，在 width 吸收完空间之后，吸收剩余空间。浮动元素 margin 为 auto 时，会自动变为 0。
 4. 边框、内边距、百分比设置，和常规流一样——都是相对于包含块的宽度。
 
@@ -150,3 +150,54 @@ clear 属性
     clear: both;
 }
 ```
+
+## 定位
+
+---
+
+-   手动控制元素在包含块中的精确位置。
+-   默认值：static，可以按照不定位理解。
+-   一个元素只要 position 的值不是 static，认为该元素是定位元素。
+-   定位元素除了 relative 以外，都是脱离常规流的。
+-   一个脱离了文档流的元素：
+    -   文档流中的元素摆放会忽略该元素。
+    -   文档流中元素计算自然高度会忽略该元素。
+
+### 相对定位
+
+-   相对定位的元素不会脱离文档流，只是相对于原来的位置进行偏移。
+-   相对定位的元素会在常规流中占据原来的位置，但是在视觉上会发生偏移。也就是说，偏移的盒子不占据其他盒子空间，不影响其他盒子的排列。
+
+### 绝对定位
+
+-   宽高为 auto，由内容决定。
+-   包含块变化：找祖先元素中第一个定位元素，该元素的填充盒为包含块。如果没有定位元素，则包含块是整个网页（初始化包含块）。
+
+### 固定定位
+
+-   其他情况和绝对定位一样，但是包含块是视口（浏览器的可视窗口）。
+
+### 定位下的居中
+
+某个方向居中：
+
+1. 定宽或定高；
+2. 水平或垂直距离为 0；
+3. 水平或垂直 margin: auto;
+
+> 绝对定位或固定定位的元素，margin 吸收剩余空间
+
+### 多个定位元素的重叠
+详细的内容需要参考 [堆叠上下文](/css/cascading-context)
+
+简单来说，可以设置 z-index 属性来控制定位元素在 z 轴上的堆叠顺序。z-index 的值越大，元素在 z 轴上的位置越靠上，元素越靠近用户。
+
+:::caution
+1. z-index 只能应用于定位元素，即 position 属性值不是 static 的元素。
+2. z-index的值可以是负数，但是常规流元素和浮动元素会覆盖它。
+:::
+
+### 补充
+- 绝对定位元素一定是块盒。
+- 绝对定位和固定定位的元素一定不是浮动元素。
+- 不存在外边距合并现象。
