--- a/src/content/docs/vue/init.mdx
+++ b/src/content/docs/vue/init.mdx
@@ -11,45 +11,20 @@ sidebar:
 
 ## 创建一个 Vue 应用
 
+---
+
 import { Steps } from "@astrojs/starlight/components";
 import { Tabs, TabItem } from "@astrojs/starlight/components";
+import { PackageManagers } from "starlight-package-managers";
 
 <Steps>
 
 1.  搭建项目：
-
-    <Tabs>
-    <TabItem label="npm">
-        ```bash
-        npm create vue@latest
-        ```
-    </TabItem>
-    <TabItem label="pnpm">
-        ```bash
-        pnpm create vue@latest
-        ```
-    </TabItem>
-    <TabItem label="yarn">
-        ```bash
-        # For Yarn Modern (v2+)
-        yarn create vue@latest
-
-            # For Yarn ^v4.11
-            yarn dlx create-vue@latest
-            ```
-        </TabItem>
-        <TabItem label="bun">
-            ```bash
-            bun create vue@latest
-            ```
-        </TabItem>
-
-    </Tabs>
-
+    <PackageManagers type="create" pkg="vue@latest" />
 2.  在提示的各选项中选择想要的配置。
 3.  安装依赖并启动开发服务器：
 
-    <Tabs>
+        <Tabs>
         <TabItem label="npm">
             ```bash
             cd <your-project-name>
@@ -78,10 +53,13 @@ import { Tabs, TabItem } from "@astrojs/starlight/components";
             bun run dev
             ```
         </TabItem>
+
     </Tabs>
 
 </Steps>
 ## 通过CDN引入
+
+---
 
 ### 全局构建
 
@@ -119,52 +97,53 @@ import { Tabs, TabItem } from "@astrojs/starlight/components";
 
 ```html
 <script type="importmap">
-{
-  "imports": {
-    "vue": "https://unpkg.com/vue@3/dist/vue.esm-browser.js"
-  }
-}
+	{
+		"imports": {
+			"vue": "https://unpkg.com/vue@3/dist/vue.esm-browser.js"
+		}
+	}
 </script>
 
 <div id="app">{{ message }}</div>
 
 <script type="module">
-	import {
-		createApp,
-		ref,
-	} from "vue";
+	import { createApp, ref } from "vue";
 
 	createApp({
 		setup() {
-        const message = ref("Hello Vue!");
-        return {
-            message,
-        };
-    }}).mount("#app");
+			const message = ref("Hello Vue!");
+			return {
+				message,
+			};
+		},
+	}).mount("#app");
 </script>
 ```
 
 ### 拆分模块
+
 随着对这份指南的逐步深入，我们可能需要将代码分割成单独的 JavaScript 文件，以便更容易管理。例如：
+
 ```html
 <!-- index.html -->
 <div id="app"></div>
 
 <script type="module">
-  import { createApp } from 'vue'
-  import MyComponent from './my-component.js'
+	import { createApp } from "vue";
+	import MyComponent from "./my-component.js";
 
-  createApp(MyComponent).mount('#app')
+	createApp(MyComponent).mount("#app");
 </script>
 ```
+
 ```js
 // my-component.js
-import { ref } from 'vue'
+import { ref } from "vue";
 export default {
-  setup() {
-    const count = ref(0)
-    return { count }
-  },
-  template: `<div>Count is: {{ count }}</div>`
-}
+	setup() {
+		const count = ref(0);
+		return { count };
+	},
+	template: `<div>Count is: {{ count }}</div>`,
+};
 ```
